# crabmail

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: action.rs  app.rs  auth.rs  config.rs  imap_client.rs  mail.rs  main.rs  smtp_client.rs  theme.rs
src/components/: command_bar.rs  composer.rs  mailbox_list.rs  message_list.rs  mod.rs  reader.rs  search.rs  setup_wizard.rs  status_bar.rs
