[package]
name = "crabmail"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# IMAP
async-imap = "0.9"
tokio-rustls = "0.25"
rustls = "0.22"
rustls-native-certs = "0.7"

# SMTP
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

# Credentials
keyring = { version = "3", features = ["apple-native"] }

# Mail parsing
mail-parser = "0.9"
html2text = "0.12"

# Error handling & logging
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
